fixed sidebar collapsing

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -19,7 +19,7 @@ body {
 }
 
 .page-wrapper {
-    flex-grow: 1;
+    flex-shrink: 100;
     padding: 20px 20px 20px 45px;
     height: calc(100vh - var(--navbar-height));
     overflow-y: auto;
