--- a/src/widgets/Sidebar/ui/SidebarItem/SidebarItem.module.scss
+++ b/src/widgets/Sidebar/ui/SidebarItem/SidebarItem.module.scss
@@ -7,6 +7,7 @@
 
 .item {
     margin-top: 10px;
+    height: 30px;
     display: flex;
     align-items: center;
 }
